updated Choral with profilation method